k8s/services.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.34.5/service.json
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: soc-platform
spec:
  selector:
    app: dashboard
  ports:
    - name: streamlit
      port: 8501
      targetPort: 8501
  type: ClusterIP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.34.5/service.json
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: soc-platform
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.34.5/service.json
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: soc-platform
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.34.5/service.json
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: soc-platform
spec:
  selector:
    app: zookeeper
  ports:
    - port: 2181
      targetPort: 2181
  type: ClusterIP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.34.5/service.json
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: soc-platform
spec:
  selector:
    app: kafka
  ports:
    - port: 9092
      targetPort: 9092
  type: ClusterIP
